manifest/objects/ALTF__Altify_Account_Completeness__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Completeness__c</fullName>
        <label>Account Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Division__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipLabel>Altify Account Division Completeness</relationshipLabel>
        <relationshipName>Altify_Account_Div_Compl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Account Completeness</relationshipLabel>
        <relationshipName>Altify_Account_Completeness</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Altify_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Altify Account</label>
        <referenceTo>ALTF__Account__c</referenceTo>
        <relationshipLabel>Altify Account Completeness</relationshipLabel>
        <relationshipName>Altify_Account_Completeness</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Answers_Last_Updated__c</fullName>
        <label>Answers Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Answers_Score__c</fullName>
        <label>Answers Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Answers_Status__c</fullName>
        <label>Answers Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Completeness_Calc_Time__c</fullName>
        <label>Completeness Calc Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Completeness_Plan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Altify Account Plan Type</label>
        <referenceTo>ALTF__Account_Plan_Type__c</referenceTo>
        <relationshipLabel>Altify Account Completeness</relationshipLabel>
        <relationshipName>Altify_Account_Completeness</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Map_Card_Count__c</fullName>
        <label>Insights Map Card Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Map_Card_Owned_And_Validated__c</fullName>
        <label>Insights Map Card Owned And Validated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Map_Last_Updated__c</fullName>
        <label>Insights Map Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Map_Section_Count__c</fullName>
        <label>Insights Map Section Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Score__c</fullName>
        <label>Insights Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Status__c</fullName>
        <label>Insights Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Most_Recent_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Account Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipLabel>Altify Account Completeness</relationshipLabel>
        <relationshipName>Altify_Account_Completeness</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Most_Recent_Plan_Answers_Score__c</fullName>
        <label>Most Recent Plan Answers Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Most_Recent_Plan_Answers_Status__c</fullName>
        <label>Most Recent Plan Answers Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Objective_Actions_Closed_Count__c</fullName>
        <label>Objective Actions Closed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Objective_Actions_Last_Updated__c</fullName>
        <label>Objective Actions Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Objective_Actions_Open_Count__c</fullName>
        <label>Objective Actions Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Objective_Actions_Overdue_Count__c</fullName>
        <label>Objective Actions Overdue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Objectives_Closed_Count__c</fullName>
        <label>Objectives Closed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Objectives_Last_Updated__c</fullName>
        <label>Objectives Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Objectives_Open_Count__c</fullName>
        <label>Objectives Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Objectives_Overdue_Count__c</fullName>
        <label>Objectives Overdue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Objectives_Score__c</fullName>
        <label>Objectives Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Objectives_Status__c</fullName>
        <label>Objectives Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Plan_Count__c</fullName>
        <label>Plan Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationship_Supportive_Key_Player_Count__c</fullName>
        <label>Relationship Supportive Key Player Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Contact_Count__c</fullName>
        <label>Relationships Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Key_Player_Count__c</fullName>
        <label>Relationships Key Player Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Map_Last_Updated__c</fullName>
        <label>Relationships Map Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Score__c</fullName>
        <label>Relationships Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Status__c</fullName>
        <label>Relationships Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Whitespace_Score__c</fullName>
        <label>Whitespace Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Whitespace_Status__c</fullName>
        <label>Whitespace Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Altify Account Completeness</label>
    <nameField>
        <label>Altify Account Completeness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Completeness</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>